// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contactSideMenu Casey renders menu correctly 1`] = `
<Connect(SideMenu)
  menuItems={
    Array [
      Object {
        "action": [Function],
        "label": "Edit",
      },
      Object {
        "action": [Function],
        "label": "Delete Person",
      },
    ]
  }
/>
`;

exports[`contactSideMenu Jean renders menu correctly when missing org permission 1`] = `
<Connect(SideMenu)
  menuItems={
    Array [
      Object {
        "action": [Function],
        "label": "Edit",
      },
      Object {
        "action": [Function],
        "label": "Unassign",
      },
    ]
  }
/>
`;

exports[`contactSideMenu Jean renders menu correctly with org permission 1`] = `
<Connect(SideMenu)
  menuItems={
    Array [
      Object {
        "action": [Function],
        "label": "Edit",
      },
      Object {
        "action": [Function],
        "label": "Attempted Contact",
        "selected": false,
      },
      Object {
        "action": [Function],
        "label": "Completed",
        "selected": false,
      },
      Object {
        "action": [Function],
        "label": "Contacted",
        "selected": false,
      },
      Object {
        "action": [Function],
        "label": "Do Not Contact",
        "selected": false,
      },
      Object {
        "action": [Function],
        "label": "Uncontacted",
        "selected": true,
      },
      Object {
        "action": [Function],
        "label": "Unassign",
      },
    ]
  }
/>
`;
